--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="icon" type="image/png" href="%VITE_APP_LOGO%" />
     <link rel="apple-touch-icon" href="%VITE_APP_LOGO%" />
-    <title>%VITE_APP_TITLE%</title>
+    <title>BRAVE SPHERE</title>
   </head>
 
   <body>
